force-app/main/default/objects/DE_Flow_Error__c/DE_Flow_Error__c.object-meta.xml
<CustomObject>
    <label>Flow Error Log</label>
    <nameField>
        <displayFormat>ERR{0000000}</displayFormat>
        <label>Error ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flow Error Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>