force-app/main/default/objects/DE_Flow_Error__c/fields/Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Error_Type__c</fullName>
    <label>Error Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IP-1 Callout Failure</fullName>
            </value>
            <value>
                <fullName>IP-3 Callout Failure</fullName>
            </value>
            <value>
                <fullName>IP-4 Callout Failure</fullName>
            </value>
            <value>
                <fullName>IP-5 Webhook Error</fullName>
            </value>
            <value>
                <fullName>IP-7 Sync Error</fullName>
            </value>
            <value>
                <fullName>Concurrency Block</fullName>
            </value>
            <value>
                <fullName>BillingEvent Retry Failure</fullName>
            </value>
            <value>
                <fullName>SOF Processing Error</fullName>
            </value>
            <value>
                <fullName>Asset Sync Error</fullName>
            </value>
            <value>
                <fullName>Flow Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>