force-app/main/default/objects/DE_Flow_Error__c/fields/Flow_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_Name__c</fullName>
    <label>Flow or Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>