force-app/main/default/objects/DE_Flow_Error__c/fields/Odoo_Payload__c.field-meta.xml
<CustomField>
    <fullName>Odoo_Payload__c</fullName>
    <label>Odoo Request Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>