force-app/main/default/objects/DE_Flow_Error__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <label>Related Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>