force-app/main/default/objects/DE_Flow_Error__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <label>Related Record Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>