force-app/main/default/objects/DE_Flow_Error__c/validationRules/VR_ERR_01_ResolutionRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_ERR_01_ResolutionRequired</fullName>
    <active>true</active>
    <description>Resolution Notes are required when marking an error as Resolved.</description>
    <errorConditionFormula>AND(Resolved__c, ISBLANK(Resolution_Notes__c))</errorConditionFormula>
    <errorDisplayField>Resolution_Notes__c</errorDisplayField>
    <errorMessage>Resolution Notes are required when marking an error as Resolved. Please document what was done.</errorMessage>
</ValidationRule>